basic structure for easy support of NSE

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,10 @@ Imports:
     methods,
     stats,
     utils,
-    dplyr (>= 0.7.0),
+    rlang,
+    glue,
+    tidyselect,
+    dplyr (>= 0.7.4),
     tidyr,
     stringr,
     purrr,
