--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,13 +17,18 @@ export(summarize_H3_factors)
 importFrom(broom,glance)
 importFrom(broom,tidy)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,anti_join)
+importFrom(dplyr,arrange)
 importFrom(dplyr,as_data_frame)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,data_frame)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(dplyr,ungroup)
 importFrom(glue,collapse)
 importFrom(glue,glue)
 importFrom(investr,invest)
@@ -62,7 +67,10 @@ importFrom(rlang,quo_text)
 importFrom(rlang,quos)
 importFrom(rlang,sym)
 importFrom(stats,setNames)
+importFrom(stringr,fixed)
 importFrom(stringr,str_c)
+importFrom(stringr,str_replace)
+importFrom(tidyr,gather)
 importFrom(tidyr,nest)
 importFrom(tidyr,unnest)
 importFrom(tidyselect,ends_with)
