--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,12 @@
 
 export("%>%")
 export(add_standards)
+export(filter)
 export(get_standards_calibrations)
+export(iso_add_metadata)
 export(iso_get_default_processor_parameters)
+export(iso_map_peaks)
+export(iso_print_data_table)
 export(iso_reset_default_process_parameters)
 export(iso_set_default_process_parameters)
 export(iso_show_default_processor_parameters)
@@ -12,7 +16,6 @@ export(iso_turn_info_messages_on)
 export(plot_H3_factors)
 export(prepare_for_calibration)
 export(print_H3_factors)
-export(print_data_table)
 export(summarize_H3_factors)
 importFrom(broom,glance)
 importFrom(broom,tidy)
@@ -28,6 +31,7 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
 importFrom(glue,collapse)
 importFrom(glue,glue)
