reference peak visualization added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(iso_set_default_process_parameters)
 export(iso_show_default_processor_parameters)
 export(iso_turn_info_messages_off)
 export(iso_turn_info_messages_on)
+export(iso_visualize_ref_peaks)
 export(plot_H3_factors)
 export(prepare_for_calibration)
 export(print_H3_factors)
@@ -33,6 +34,17 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
+importFrom(ggplot2,"%+%")
+importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_string)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_bw)
 importFrom(glue,collapse)
 importFrom(glue,glue)
 importFrom(investr,invest)
