basic visualization functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(iso_turn_info_messages_on)
 export(iso_unnest_calib_data)
 export(iso_unnest_delta_calib_coefs)
 export(iso_unnest_delta_calib_summary)
+export(iso_visualize_data)
 export(iso_visualize_delta_calib_fits)
 export(iso_visualize_ref_peaks)
 export(parse_datetime)
