--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,19 +6,25 @@ export(extract_word)
 export(filter)
 export(iso_add_metadata)
 export(iso_add_standards)
+export(iso_apply_delta_calibrations)
+export(iso_calibrate_area)
 export(iso_calibrate_delta)
 export(iso_get_default_processor_parameters)
 export(iso_map_peaks)
 export(iso_prepare_for_calibration)
 export(iso_print_data_table)
+export(iso_remove_nested_data)
 export(iso_reset_default_process_parameters)
 export(iso_set_default_process_parameters)
 export(iso_show_default_processor_parameters)
 export(iso_turn_info_messages_off)
 export(iso_turn_info_messages_on)
+export(iso_unnest_area_calib_coefs)
+export(iso_unnest_area_calib_summary)
 export(iso_unnest_calib_data)
 export(iso_unnest_delta_calib_coefs)
 export(iso_unnest_delta_calib_summary)
+export(iso_visualize_area_calib_fits)
 export(iso_visualize_data)
 export(iso_visualize_delta_calib_fits)
 export(iso_visualize_ref_peaks)
@@ -99,6 +105,7 @@ importFrom(rlang,lang_head)
 importFrom(rlang,quo)
 importFrom(rlang,quo_expr)
 importFrom(rlang,quo_is_lang)
+importFrom(rlang,quo_is_missing)
 importFrom(rlang,quo_is_null)
 importFrom(rlang,quo_is_symbol)
 importFrom(rlang,quo_text)
