switch to sym and !! to avoid deprecated rlang functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,11 +91,9 @@ importFrom(purrr,safely)
 importFrom(readxl,read_excel)
 importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
-importFrom(rlang,UQ)
-importFrom(rlang,UQE)
-importFrom(rlang,UQS)
 importFrom(rlang,enquo)
 importFrom(rlang,eval_tidy)
+importFrom(rlang,get_expr)
 importFrom(rlang,is_empty)
 importFrom(rlang,is_integerish)
 importFrom(rlang,is_list)
