--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,11 @@ export(iso_apply_delta_calibrations)
 export(iso_calibrate_area)
 export(iso_calibrate_delta)
 export(iso_get_default_processor_parameters)
+export(iso_get_missing_metadata)
 export(iso_map_peaks)
 export(iso_prepare_for_calibration)
 export(iso_print_data_table)
+export(iso_remove_missing_metadata)
 export(iso_remove_nested_data)
 export(iso_reset_default_process_parameters)
 export(iso_set_default_process_parameters)
