interact with peak mapping outcomes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,11 +11,13 @@ export(iso_calibrate_area)
 export(iso_calibrate_delta)
 export(iso_get_default_processor_parameters)
 export(iso_get_missing_metadata)
+export(iso_get_problematic_peaks)
 export(iso_map_peaks)
 export(iso_prepare_for_calibration)
 export(iso_print_data_table)
 export(iso_remove_missing_metadata)
 export(iso_remove_nested_data)
+export(iso_remove_problematic_peaks)
 export(iso_reset_default_process_parameters)
 export(iso_set_default_process_parameters)
 export(iso_show_default_processor_parameters)
@@ -45,6 +47,7 @@ importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_data_frame)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
 importFrom(dplyr,data_frame)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
