--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,12 @@ export(iso_add_standards)
 export(iso_apply_delta_calibrations)
 export(iso_calibrate_area)
 export(iso_calibrate_delta)
+export(iso_generate_calibration)
 export(iso_get_default_processor_parameters)
 export(iso_get_missing_metadata)
 export(iso_get_problematic_peaks)
 export(iso_map_peaks)
+export(iso_plot_ref_peaks)
 export(iso_prepare_for_calibration)
 export(iso_print_data_table)
 export(iso_remove_missing_metadata)
@@ -31,7 +33,6 @@ export(iso_unnest_delta_calib_summary)
 export(iso_visualize_area_calib_fits)
 export(iso_visualize_data)
 export(iso_visualize_delta_calib_fits)
-export(iso_visualize_ref_peaks)
 export(parse_datetime)
 export(parse_double)
 export(parse_integer)
@@ -51,9 +52,11 @@ importFrom(dplyr,case_when)
 importFrom(dplyr,data_frame)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
+importFrom(dplyr,right_join)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
@@ -62,10 +65,12 @@ importFrom(ggplot2,"%+%")
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,element_text)
+importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,is.ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
