--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,30 +6,31 @@ export(extract_word)
 export(filter)
 export(iso_add_metadata)
 export(iso_add_standards)
-export(iso_apply_delta_calibrations)
+export(iso_apply_calibration)
 export(iso_calibrate_area)
 export(iso_calibrate_delta)
 export(iso_generate_calibration)
 export(iso_get_default_processor_parameters)
 export(iso_get_missing_metadata)
+export(iso_get_problematic_calibrations)
 export(iso_get_problematic_peaks)
 export(iso_map_peaks)
 export(iso_plot_ref_peaks)
 export(iso_prepare_for_calibration)
 export(iso_print_data_table)
+export(iso_remove_list_columns)
 export(iso_remove_missing_metadata)
-export(iso_remove_nested_data)
+export(iso_remove_problematic_calibrations)
 export(iso_remove_problematic_peaks)
 export(iso_reset_default_process_parameters)
 export(iso_set_default_process_parameters)
 export(iso_show_default_processor_parameters)
 export(iso_turn_info_messages_off)
 export(iso_turn_info_messages_on)
-export(iso_unnest_area_calib_coefs)
-export(iso_unnest_area_calib_summary)
-export(iso_unnest_calib_data)
-export(iso_unnest_delta_calib_coefs)
-export(iso_unnest_delta_calib_summary)
+export(iso_unnest_calibration_coefs)
+export(iso_unnest_calibration_range)
+export(iso_unnest_calibration_summary)
+export(iso_unnest_data)
 export(iso_visualize_area_calib_fits)
 export(iso_visualize_data)
 export(iso_visualize_delta_calib_fits)
@@ -41,6 +42,7 @@ export(parse_number)
 export(plot_H3_factors)
 export(print_H3_factors)
 export(summarize_H3_factors)
+export(unnest)
 importFrom(broom,glance)
 importFrom(broom,tidy)
 importFrom(dplyr,"%>%")
@@ -50,6 +52,7 @@ importFrom(dplyr,as_data_frame)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,data_frame)
+importFrom(dplyr,do)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,inner_join)
@@ -57,6 +60,7 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
 importFrom(dplyr,right_join)
+importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
@@ -94,6 +98,7 @@ importFrom(purrr,map2)
 importFrom(purrr,map2_chr)
 importFrom(purrr,map2_lgl)
 importFrom(purrr,map_chr)
+importFrom(purrr,map_dbl)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,pmap)
@@ -122,6 +127,7 @@ importFrom(rlang,sym)
 importFrom(stats,setNames)
 importFrom(stringr,fixed)
 importFrom(stringr,str_c)
+importFrom(stringr,str_detect)
 importFrom(stringr,str_replace)
 importFrom(tidyr,gather)
 importFrom(tidyr,nest)
