--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,15 +7,15 @@ export(filter)
 export(iso_add_metadata)
 export(iso_add_standards)
 export(iso_apply_calibration)
-export(iso_calibrate_area)
-export(iso_calibrate_delta)
 export(iso_generate_calibration)
+export(iso_generate_summary_table)
 export(iso_get_default_processor_parameters)
 export(iso_get_missing_metadata)
 export(iso_get_problematic_calibrations)
 export(iso_get_problematic_peaks)
 export(iso_map_peaks)
 export(iso_plot_calibration_parameters)
+export(iso_plot_data)
 export(iso_plot_ref_peaks)
 export(iso_prepare_for_calibration)
 export(iso_print_data_table)
@@ -29,10 +29,10 @@ export(iso_show_default_processor_parameters)
 export(iso_turn_info_messages_off)
 export(iso_turn_info_messages_on)
 export(iso_unnest_calibration_coefs)
+export(iso_unnest_calibration_parameters)
 export(iso_unnest_calibration_range)
 export(iso_unnest_calibration_summary)
 export(iso_unnest_data)
-export(iso_visualize_data)
 export(parse_datetime)
 export(parse_double)
 export(parse_integer)
@@ -106,6 +106,7 @@ importFrom(readxl,read_excel)
 importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
 importFrom(rlang,enquo)
+importFrom(rlang,ensyms)
 importFrom(rlang,eval_tidy)
 importFrom(rlang,get_expr)
 importFrom(rlang,is_empty)
