simplify highlighting of used reference peak

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,6 +106,7 @@ importFrom(readxl,read_excel)
 importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
 importFrom(rlang,enquo)
+importFrom(rlang,enquos)
 importFrom(rlang,ensyms)
 importFrom(rlang,eval_tidy)
 importFrom(rlang,get_expr)
