--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ importFrom(dplyr,ungroup)
 importFrom(forcats,as_factor)
 importFrom(ggplot2,"%+%")
 importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_q)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_wrap)
