add calibration range plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(iso_get_problematic_calibrations)
 export(iso_get_problematic_peaks)
 export(iso_map_peaks)
 export(iso_plot_calibration_parameters)
+export(iso_plot_calibration_range)
 export(iso_plot_data)
 export(iso_plot_ref_peaks)
 export(iso_prepare_for_calibration)
