--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,7 +79,6 @@ importFrom(ggplot2,is.ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
-importFrom(glue,collapse)
 importFrom(glue,glue)
 importFrom(investr,invest)
 importFrom(isoreader,extract_substring)
@@ -131,6 +130,8 @@ importFrom(stringr,fixed)
 importFrom(stringr,str_c)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_replace)
+importFrom(tibble,as_tibble)
+importFrom(tibble,tibble)
 importFrom(tidyr,gather)
 importFrom(tidyr,nest)
 importFrom(tidyr,unnest)
