--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,10 @@ export(iso_get_problematic_peaks)
 export(iso_map_peaks)
 export(iso_plot_calibration_parameters)
 export(iso_plot_calibration_range)
+export(iso_plot_continuous_flow_data)
 export(iso_plot_data)
+export(iso_plot_dual_inlet_data)
+export(iso_plot_raw_data)
 export(iso_plot_ref_peaks)
 export(iso_prepare_for_calibration)
 export(iso_print_data_table)
@@ -43,6 +46,7 @@ export(plot_H3_factors)
 export(print_H3_factors)
 export(summarize_H3_factors)
 export(unnest)
+import(isoreader)
 importFrom(broom,glance)
 importFrom(broom,tidy)
 importFrom(dplyr,"%>%")
@@ -67,29 +71,26 @@ importFrom(dplyr,ungroup)
 importFrom(forcats,as_factor)
 importFrom(ggplot2,"%+%")
 importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_)
 importFrom(ggplot2,aes_q)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,element_text)
+importFrom(ggplot2,expand_limits)
+importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,is.ggplot)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(glue,glue)
 importFrom(investr,invest)
-importFrom(isoreader,extract_substring)
-importFrom(isoreader,extract_word)
-importFrom(isoreader,iso_turn_info_messages_off)
-importFrom(isoreader,iso_turn_info_messages_on)
-importFrom(isoreader,parse_datetime)
-importFrom(isoreader,parse_double)
-importFrom(isoreader,parse_integer)
-importFrom(isoreader,parse_logical)
-importFrom(isoreader,parse_number)
 importFrom(methods,is)
 importFrom(modelr,add_residuals)
 importFrom(modelr,geom_ref_line)
