--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,5 +1,5 @@
 title: isoprocessor
-url: http://kopflab.github.io/isoprocessor/
+url: http://isoprocessor.isoverse.org/
 template:
   params:
     bootswatch: simplex
@@ -26,7 +26,7 @@ navbar:
     href: reference/index.html
   right:
   - icon: fa-github fa-lg
-    href: https://github.com/kopflab/isoprocessor
+    href: https://github.com/isoverse/isoprocessor
 
 
 reference:
