--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(iso_reset_default_processor_parameters)
 export(iso_set_default_processor_parameters)
 export(iso_show_default_processor_parameters)
 export(iso_summarize_data_table)
+export(iso_summarize_peak_mappings)
 export(iso_turn_info_messages_off)
 export(iso_turn_info_messages_on)
 export(iso_unnest_calibration_coefs)
