finalize iso_summarize_peak_mappings, rename other peaks mapping problem functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(iso_generate_summary_table)
 export(iso_get_default_processor_parameters)
 export(iso_get_missing_metadata)
 export(iso_get_problematic_calibrations)
+export(iso_get_problematic_peak_mappings)
 export(iso_get_problematic_peaks)
 export(iso_map_peaks)
 export(iso_plot_calibration_parameters)
@@ -29,6 +30,7 @@ export(iso_print_data_table)
 export(iso_remove_list_columns)
 export(iso_remove_missing_metadata)
 export(iso_remove_problematic_calibrations)
+export(iso_remove_problematic_peak_mappings)
 export(iso_remove_problematic_peaks)
 export(iso_reset_default_processor_parameters)
 export(iso_set_default_processor_parameters)
