incorporate visualization in vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,6 @@ export(iso_convert_time)
 export(iso_generate_calibration)
 export(iso_generate_summary_table)
 export(iso_get_default_processor_parameters)
-export(iso_get_missing_metadata)
 export(iso_get_problematic_calibrations)
 export(iso_get_problematic_peak_mappings)
 export(iso_get_problematic_peaks)
@@ -33,7 +32,6 @@ export(iso_prepare_continuous_flow_plot_data)
 export(iso_prepare_for_calibration)
 export(iso_print_data_table)
 export(iso_remove_list_columns)
-export(iso_remove_missing_metadata)
 export(iso_remove_problematic_calibrations)
 export(iso_remove_problematic_peak_mappings)
 export(iso_remove_problematic_peaks)
@@ -94,6 +92,8 @@ importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_rect)
+importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,is.ggplot)
 importFrom(ggplot2,labs)
