allow fixed size and make calib params a facet grid by default

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,7 +131,7 @@ importFrom(rlang,lang_args)
 importFrom(rlang,lang_head)
 importFrom(rlang,quo)
 importFrom(rlang,quo_expr)
-importFrom(rlang,quo_is_lang)
+importFrom(rlang,quo_is_call)
 importFrom(rlang,quo_is_missing)
 importFrom(rlang,quo_is_null)
 importFrom(rlang,quo_is_symbol)
