--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(iso_apply_calibration)
 export(iso_calculate_ratios)
 export(iso_convert_signals)
 export(iso_convert_time)
+export(iso_evaluate_calibration_range)
 export(iso_generate_calibration)
 export(iso_generate_summary_table)
 export(iso_get_default_processor_parameters)
@@ -104,8 +105,6 @@ importFrom(ggplot2,theme_bw)
 importFrom(glue,glue)
 importFrom(investr,invest)
 importFrom(methods,is)
-importFrom(modelr,add_residuals)
-importFrom(modelr,geom_ref_line)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map2_chr)
