introduce in_calib column for easier identification of calibration

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(iso_get_problematic_calibrations)
 export(iso_get_problematic_peak_mappings)
 export(iso_get_problematic_peaks)
 export(iso_map_peaks)
+export(iso_mark_calibration_range)
 export(iso_plot_calibration_parameters)
 export(iso_plot_calibration_range)
 export(iso_plot_continuous_flow_data)
