--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,8 @@ export(iso_get_default_processor_parameters)
 export(iso_get_problematic_calibrations)
 export(iso_get_problematic_peak_mappings)
 export(iso_get_problematic_peaks)
+export(iso_get_processor_example)
+export(iso_get_processor_examples)
 export(iso_map_peaks)
 export(iso_mark_calibration_range)
 export(iso_plot_calibration_parameters)
