implement calibration export

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(iso_calculate_ratios)
 export(iso_convert_signals)
 export(iso_convert_time)
 export(iso_evaluate_calibration_range)
+export(iso_export_calibration_to_excel)
 export(iso_generate_calibration)
 export(iso_generate_summary_table)
 export(iso_get_default_processor_parameters)
