--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: isoprocessor
 Title: IRMS data processor
 Description: Data processing and reduction pipelines for isotope ratio mass spectrometry (IRMS) data
-Version: 0.3.7.8
+Version: 0.3.7.9
 Authors@R: person("Sebastian", "Kopf", email = "sebastian.kopf@colorado.edu",
     role = c("aut", "cre"))
 URL: https://github.com/isoverse/isoprocessor
@@ -27,7 +27,8 @@ Imports:
     lubridate,
     broom,
     investr,
-    readxl
+    readxl,
+    openxlsx
 Suggests:
     testthat,
     knitr,
