add old release check to appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,6 +21,8 @@ environment:
     USE_RTOOLS: true
     NOT_CRAN: true
   matrix:
+    - configuration: oldrel
+      R_VERSION: oldrel
     - configuration: release
       R_VERSION: release
     - configuration: devel
