update build ignore

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,10 +1,19 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^\.travis\.yml$
+^appveyor\.yml$
+^codecov\.yml$
+^_pkgdown\.yml$
 ^\.httr-oauth$
 ^Makefile$
 ^NEWS$
+^docs$
 ^cache$
-^tmp$
+^tests/testthat/cache$
+^inst/other$
+^tmp.*$
 ^README-.*\.png$
 ^README\.Rmd$
 ^logo\.png$
+^vignettes/cache$
+^vignettes/fig_output$
