--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,17 @@ S3method(iso_calculate_deltas,data.frame)
 S3method(iso_calculate_deltas,default)
 S3method(iso_calculate_deltas,iso_file)
 S3method(iso_calculate_deltas,iso_file_list)
+S3method(iso_calculate_ratios,data.frame)
+S3method(iso_calculate_ratios,default)
+S3method(iso_calculate_ratios,iso_file)
+S3method(iso_calculate_ratios,iso_file_list)
+S3method(iso_find_peaks,data.frame)
+S3method(iso_find_peaks,default)
+S3method(iso_find_peaks,iso_file)
+S3method(iso_find_peaks,iso_file_list)
+S3method(iso_mutate_peak_table,default)
+S3method(iso_mutate_peak_table,iso_file)
+S3method(iso_mutate_peak_table,iso_file_list)
 S3method(iso_plot_continuous_flow_data,data.frame)
 S3method(iso_plot_continuous_flow_data,default)
 S3method(iso_plot_continuous_flow_data,iso_file)
@@ -16,21 +27,29 @@ export(iso_add_metadata)
 export(iso_add_standards)
 export(iso_apply_calibration)
 export(iso_calculate_deltas)
+export(iso_calculate_peak_delats)
+export(iso_calculate_peak_ratios)
 export(iso_calculate_ratios)
+export(iso_combine_raw_data_with_peak_table)
 export(iso_convert_signals)
 export(iso_convert_time)
 export(iso_evaluate_calibration_range)
 export(iso_export_calibration_to_excel)
+export(iso_find_peaks)
+export(iso_format)
 export(iso_generate_calibration)
 export(iso_generate_summary_table)
 export(iso_get_default_processor_parameters)
+export(iso_get_peak_table)
 export(iso_get_problematic_calibrations)
 export(iso_get_problematic_peak_mappings)
 export(iso_get_problematic_peaks)
 export(iso_get_processor_example)
 export(iso_get_processor_examples)
+export(iso_integrate_peaks)
 export(iso_map_peaks)
 export(iso_mark_calibration_range)
+export(iso_mutate_peak_table)
 export(iso_plot_calibration_parameters)
 export(iso_plot_calibration_range)
 export(iso_plot_continuous_flow_data)
@@ -47,6 +66,9 @@ export(iso_remove_problematic_peak_mappings)
 export(iso_remove_problematic_peaks)
 export(iso_reset_default_processor_parameters)
 export(iso_set_default_processor_parameters)
+export(iso_set_peak_table)
+export(iso_set_peak_table_from_isodat_vendor_data_table)
+export(iso_set_peak_table_from_vendor_data_table)
 export(iso_show_default_processor_parameters)
 export(iso_summarize_data_table)
 export(iso_summarize_peak_mappings)
