make peak mapping iso_file compatible

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,14 @@ S3method(iso_find_peaks,data.frame)
 S3method(iso_find_peaks,default)
 S3method(iso_find_peaks,iso_file)
 S3method(iso_find_peaks,iso_file_list)
+S3method(iso_get_problematic_peak_mappings,data.frame)
+S3method(iso_get_problematic_peak_mappings,default)
+S3method(iso_get_problematic_peak_mappings,iso_file)
+S3method(iso_get_problematic_peak_mappings,iso_file_list)
+S3method(iso_map_peaks,data.frame)
+S3method(iso_map_peaks,default)
+S3method(iso_map_peaks,iso_file)
+S3method(iso_map_peaks,iso_file_list)
 S3method(iso_mutate_peak_table,default)
 S3method(iso_mutate_peak_table,iso_file)
 S3method(iso_mutate_peak_table,iso_file_list)
@@ -19,6 +27,14 @@ S3method(iso_plot_continuous_flow_data,data.frame)
 S3method(iso_plot_continuous_flow_data,default)
 S3method(iso_plot_continuous_flow_data,iso_file)
 S3method(iso_plot_continuous_flow_data,iso_file_list)
+S3method(iso_remove_problematic_peak_mappings,data.frame)
+S3method(iso_remove_problematic_peak_mappings,default)
+S3method(iso_remove_problematic_peak_mappings,iso_file)
+S3method(iso_remove_problematic_peak_mappings,iso_file_list)
+S3method(iso_summarize_peak_mappings,data.frame)
+S3method(iso_summarize_peak_mappings,default)
+S3method(iso_summarize_peak_mappings,iso_file)
+S3method(iso_summarize_peak_mappings,iso_file_list)
 export("%>%")
 export(extract_substring)
 export(extract_word)
