peak table unit conversion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,10 @@ S3method(iso_calculate_ratios,data.frame)
 S3method(iso_calculate_ratios,default)
 S3method(iso_calculate_ratios,iso_file)
 S3method(iso_calculate_ratios,iso_file_list)
+S3method(iso_convert_peak_table_units,data.frame)
+S3method(iso_convert_peak_table_units,default)
+S3method(iso_convert_peak_table_units,iso_file)
+S3method(iso_convert_peak_table_units,iso_file_list)
 S3method(iso_find_peaks,data.frame)
 S3method(iso_find_peaks,default)
 S3method(iso_find_peaks,iso_file)
@@ -47,6 +51,7 @@ export(iso_calculate_peak_delats)
 export(iso_calculate_peak_ratios)
 export(iso_calculate_ratios)
 export(iso_combine_raw_data_with_peak_table)
+export(iso_convert_peak_table_units)
 export(iso_convert_signals)
 export(iso_convert_time)
 export(iso_evaluate_calibration_range)
@@ -81,6 +86,7 @@ export(iso_remove_problematic_calibrations)
 export(iso_remove_problematic_peak_mappings)
 export(iso_remove_problematic_peaks)
 export(iso_reset_default_processor_parameters)
+export(iso_scale_double_with_units)
 export(iso_set_default_processor_parameters)
 export(iso_set_peak_table)
 export(iso_set_peak_table_from_isodat_vendor_data_table)
