implement iso_mutate_peak_table for grouped data frames

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ S3method(iso_map_peaks,data.frame)
 S3method(iso_map_peaks,default)
 S3method(iso_map_peaks,iso_file)
 S3method(iso_map_peaks,iso_file_list)
+S3method(iso_mutate_peak_table,data.frame)
 S3method(iso_mutate_peak_table,default)
 S3method(iso_mutate_peak_table,iso_file)
 S3method(iso_mutate_peak_table,iso_file_list)
