implement broad scale iso_plot_data and derived functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,8 @@ export(iso_find_peaks)
 export(iso_format)
 export(iso_generate_calibration)
 export(iso_generate_summary_table)
+export(iso_get_calibration_data)
+export(iso_get_calibration_range)
 export(iso_get_default_processor_parameters)
 export(iso_get_peak_table)
 export(iso_get_problematic_calibrations)
@@ -71,6 +73,8 @@ export(iso_get_processor_examples)
 export(iso_integrate_peaks)
 export(iso_map_peaks)
 export(iso_mark_calibration_range)
+export(iso_mark_outliers)
+export(iso_mark_value_range)
 export(iso_mutate_peak_table)
 export(iso_plot_calibration_parameters)
 export(iso_plot_calibration_range)
@@ -79,6 +83,7 @@ export(iso_plot_data)
 export(iso_plot_dual_inlet_data)
 export(iso_plot_raw_data)
 export(iso_plot_ref_peaks)
+export(iso_plot_residuals)
 export(iso_prepare_continuous_flow_plot_data)
 export(iso_prepare_for_calibration)
 export(iso_print_data_table)
