--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: isoprocessor
 Title: IRMS data processor
 Description: Data processing and reduction pipelines for isotope ratio mass spectrometry (IRMS) data
-Version: 0.5.2
+Version: 0.5.3
 Authors@R: person("Sebastian", "Kopf", email = "sebastian.kopf@colorado.edu",
     role = c("aut", "cre"))
 URL: https://github.com/isoverse/isoprocessor
@@ -34,6 +34,7 @@ Suggests:
     testthat,
     knitr,
     rmarkdown,
+    plotly,
     covr
 License: GPL (>= 2) | file LICENSE
 Encoding: UTF-8
