--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,8 +61,11 @@ export(iso_find_peaks)
 export(iso_format)
 export(iso_generate_calibration)
 export(iso_generate_summary_table)
+export(iso_get_calibration_coefs)
 export(iso_get_calibration_data)
+export(iso_get_calibration_parameters)
 export(iso_get_calibration_range)
+export(iso_get_calibration_summary)
 export(iso_get_default_processor_parameters)
 export(iso_get_peak_table)
 export(iso_get_problematic_calibrations)
