--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,6 +98,7 @@ export(iso_reset_default_processor_parameters)
 export(iso_scale_double_with_units)
 export(iso_set_default_processor_parameters)
 export(iso_set_peak_table)
+export(iso_set_peak_table_from_auto_vendor_data_table)
 export(iso_set_peak_table_from_isodat_vendor_data_table)
 export(iso_set_peak_table_from_vendor_data_table)
 export(iso_show_default_processor_parameters)
@@ -180,6 +181,8 @@ importFrom(purrr,safely)
 importFrom(readxl,read_excel)
 importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
+importFrom(rlang,as_label)
+importFrom(rlang,enexpr)
 importFrom(rlang,enquo)
 importFrom(rlang,ensyms)
 importFrom(rlang,eval_tidy)
@@ -193,7 +196,6 @@ importFrom(rlang,quo_is_call)
 importFrom(rlang,quo_is_missing)
 importFrom(rlang,quo_is_null)
 importFrom(rlang,quo_is_symbol)
-importFrom(rlang,quo_text)
 importFrom(rlang,quos)
 importFrom(rlang,sym)
 importFrom(stats,setNames)
