iso_plot_scan_data function
iso_format moved to isoreader

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,10 @@ S3method(iso_plot_continuous_flow_data,data.frame)
 S3method(iso_plot_continuous_flow_data,default)
 S3method(iso_plot_continuous_flow_data,iso_file)
 S3method(iso_plot_continuous_flow_data,iso_file_list)
+S3method(iso_plot_scan_data,data.frame)
+S3method(iso_plot_scan_data,default)
+S3method(iso_plot_scan_data,iso_file)
+S3method(iso_plot_scan_data,iso_file_list)
 S3method(iso_remove_problematic_peak_mappings,data.frame)
 S3method(iso_remove_problematic_peak_mappings,default)
 S3method(iso_remove_problematic_peak_mappings,iso_file)
@@ -87,8 +91,10 @@ export(iso_plot_dual_inlet_data)
 export(iso_plot_raw_data)
 export(iso_plot_ref_peaks)
 export(iso_plot_residuals)
+export(iso_plot_scan_data)
 export(iso_prepare_continuous_flow_plot_data)
 export(iso_prepare_for_calibration)
+export(iso_prepare_scan_plot_data)
 export(iso_print_data_table)
 export(iso_remove_list_columns)
 export(iso_remove_problematic_calibrations)
@@ -98,6 +104,7 @@ export(iso_reset_default_processor_parameters)
 export(iso_scale_double_with_units)
 export(iso_set_default_processor_parameters)
 export(iso_set_peak_table)
+export(iso_set_peak_table_automatically_from_vendor_data_table)
 export(iso_set_peak_table_from_auto_vendor_data_table)
 export(iso_set_peak_table_from_isodat_vendor_data_table)
 export(iso_set_peak_table_from_vendor_data_table)
@@ -148,6 +155,7 @@ importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_)
 importFrom(ggplot2,aes_q)
 importFrom(ggplot2,aes_string)
+importFrom(ggplot2,coord_cartesian)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,expand_limits)
 importFrom(ggplot2,facet_grid)
@@ -157,11 +165,14 @@ importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_rect)
+importFrom(ggplot2,geom_smooth)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,is.ggplot)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_linetype_manual)
 importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_x_datetime)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
