mark_x_range examples added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,10 @@ S3method(iso_plot_continuous_flow_data,data.frame)
 S3method(iso_plot_continuous_flow_data,default)
 S3method(iso_plot_continuous_flow_data,iso_file)
 S3method(iso_plot_continuous_flow_data,iso_file_list)
+S3method(iso_plot_dual_inlet_data,data.frame)
+S3method(iso_plot_dual_inlet_data,default)
+S3method(iso_plot_dual_inlet_data,iso_file)
+S3method(iso_plot_dual_inlet_data,iso_file_list)
 S3method(iso_plot_scan_data,data.frame)
 S3method(iso_plot_scan_data,default)
 S3method(iso_plot_scan_data,iso_file)
@@ -82,6 +86,7 @@ export(iso_map_peaks)
 export(iso_mark_calibration_range)
 export(iso_mark_outliers)
 export(iso_mark_value_range)
+export(iso_mark_x_range)
 export(iso_mutate_peak_table)
 export(iso_plot_calibration_parameters)
 export(iso_plot_calibration_range)
@@ -93,6 +98,7 @@ export(iso_plot_ref_peaks)
 export(iso_plot_residuals)
 export(iso_plot_scan_data)
 export(iso_prepare_continuous_flow_plot_data)
+export(iso_prepare_dual_inlet_plot_data)
 export(iso_prepare_for_calibration)
 export(iso_prepare_scan_plot_data)
 export(iso_print_data_table)
