introduce and use iso_identify_outliers function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,7 @@ export(iso_get_problematic_peak_mappings)
 export(iso_get_problematic_peaks)
 export(iso_get_processor_example)
 export(iso_get_processor_examples)
+export(iso_identify_outliers)
 export(iso_integrate_peaks)
 export(iso_map_peaks)
 export(iso_mark_calibration_range)
