add iso_export_data_to_excel convenience function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ export(iso_convert_signals)
 export(iso_convert_time)
 export(iso_evaluate_calibration_range)
 export(iso_export_calibration_to_excel)
+export(iso_export_data_to_excel)
 export(iso_find_peaks)
 export(iso_format)
 export(iso_generate_calibration)
